# DST-session

./: .env.example  .gitignore  README.md  README.zh-CN.md  ROADMAP.zh-CN.md  claude-usage-messages-discrepancy-report.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.kiro/steering/: product.md  structure.md  tech.md
docs/superpowers/plans/: 2026-05-08-deepseek-session-manager-v0.1.md
scripts/: sync-version.mjs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  index.rs  json_util.rs  main.rs  model.rs  paths.rs  shell.rs  state.rs  time.rs  usage.rs
src-tauri/src/launcher/: mod.rs  posix.rs  windows.rs
src-tauri/src/providers/: claude.rs  codex.rs  deepseek.rs  mod.rs
src/api/: index.ts  tauri.ts
src/components/: CommandTerminal.tsx  EmptyState.tsx  GroupList.tsx  GroupPicker.tsx  Icon.tsx  IconButton.tsx  LauncherToggle.tsx  LocaleToggle.tsx  MessageStack.tsx  ProviderLaunchSettings.tsx  QuickReply.tsx  SessionCard.tsx  SessionDetails.tsx  SessionList.tsx  SettingsMenu.tsx  Sidebar.tsx  SourcePicker.tsx  TitleBar.tsx  UsagePage.tsx
src/hooks/: useAppState.ts  useAutoDismiss.ts  useClickAway.ts  useLocale.ts  useProviders.ts  useSessions.ts  useTheme.ts  useTokenUsage.ts  useTranslation.ts
src/lib/: commands.test.ts  commands.ts  favorites.ts  format.ts  i18n.test.ts  i18n.ts  session.test.ts  session.ts  usage.test.ts  usage.ts
src/styles/: base.css  index.css  layout.css  tokens.css
src/styles/components/: buttons.css  detail-panel.css  messages.css  session-list.css  settings.css  (+3 more)
(+3 files in other folders)
