[package]
name = "deepseek-session-manager"
version = "0.2.1"
description = "Local GUI for managing DeepSeek TUI sessions"
authors = ["Cap"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
