[package]
name = "agent-session-manager"
version = "0.3.6"
description = "Local GUI for managing AI CLI and agent sessions"
authors = ["Cap"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
